--- a/ServiciiAutoProject/Views/Records/EditRecord.cshtml
+++ b/ServiciiAutoProject/Views/Records/EditRecord.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewBag.Title = "Editare inregistrare";
-    var emailRegex = @"/^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$/";
+    var emailRegex = @"[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$";
 }
 
-<form id="saveRecord" name="saveRecord" class="edit-panel" onsubmit="editRecordController.verifyIfVlarefExists();">
+<form id="saveRecord" name="saveRecord" class="edit-panel" onsubmit="editRecordController.validateAndSaveRecord();">
     <div id="generalInformation">
         <h3 class="details-header">Informatii generale inregistare</h3>
         <div class="row fields-padding">
@@ -13,10 +13,10 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="col-md-6">
-                                    <label>Numar inregistare: </label>
+                                    <label>Numar inmatriculare: </label>
                                 </div>
                                 <div class="col-md-6">
-                                    <input class="form-control" placeholder="Numar inmatriculare" id="nrImatriculare" type="text" />
+                                    <input class="form-control" placeholder="Numar inmatriculare" id="nrImatriculare" type="text" required/>
                                 </div>
                             </div>
                         </div>
@@ -28,7 +28,7 @@
                                     <label>Nume client</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <input class="form-control" placeholder="Nume client" id="clientName" type="text" />
+                                    <input class="form-control" placeholder="Nume client" id="clientName" type="text" required/>
                                 </div>
                             </div>
                         </div>
@@ -46,7 +46,7 @@
                                     <label>Email</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <input class="form-control" id="email" placeholder="Email" type="email" required />
+                                    <input class="form-control" id="email" placeholder="Email" type="email" pattern="@emailRegex"/>
                                 </div>
                             </div>
                         </div>
@@ -58,7 +58,7 @@
                                     <label>Numar telefon</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <input class="form-control" id="phoneNumber" type="text" required />
+                                    <input class="form-control" id="phoneNumber" type="tel" maxlength="10" required/>
                                 </div>
                             </div>
                         </div>
@@ -73,10 +73,16 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="col-md-6">
-                                    <label>Tip masina</label>
+                                    <label>Tip inregistrare</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <input class="form-control" placeholder="Tip masina" id="vehicleType" type="text" />
+                                    <select class="form-control" placeholder="Tip inregistrare" id="recordType" required>
+                                        <option selected disabled hidden style='display: none' value=''></option>
+                                        @foreach (var record in ViewBag.RecordTypes)
+                                                                                {
+                                        <option value="@record.Id" id="@record.Id">@record.TypeName</option>
+                                                                                }
+                                    </select>
                                 </div>
                             </div>
                         </div>
@@ -85,10 +91,16 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="col-md-6">
-                                    <label>Tip inregistrare</label>
+                                    <label>Tip vehicul</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <input class="form-control" placeholder="Ex: asigurare" id="registrationType" type="text" />
+                                    <select class="form-control" placeholder="Tip vehicul" id="vehicleType" required>
+                                        <option selected disabled hidden style='display: none' value=''></option>
+                                        @foreach (var vehicle in ViewBag.VehicleTypes)
+                                                                                {
+                                        <option value="@vehicle.Id" id="@vehicle.Id">@vehicle.Name</option>
+                                                                                }
+                                    </select>
                                 </div>
                             </div>
                         </div>
@@ -106,10 +118,49 @@
                                     <label>Data expirare</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <input class="form-control" type="date" placeholder="dd/MM/yyyy" id="expirationDate" />
+                                    <input class="form-control" autocomplete="off" placeholder="dd/MM/yyyy" id="expirationDate" type="text" required />
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="col-md-6">
+                                    <label>Status anuntare client</label>
+                                </div>
+                                <div class="col-md-6">
+                                    <select class="form-control" placeholder="Tip inregistarre" id="clientInformedStatus">
+                                        <option selected disabled hidden style='display: none' value=''></option>
+                                        @foreach (var clientInformedStatus in ViewBag.ClientInformedStatueses)
+                                                                                {
+                                        <option value="@clientInformedStatus.Id" id="@clientInformedStatus.Id">@clientInformedStatus.StatusName</option>
+                                                                                }
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row fields-padding">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="col-md-6">
+                                    <label>Informatii aditionale</label>
+                                </div>
+                                <div class="col-md-6">
+                                    <textarea class="form-control" rows="3" autocomplete="off" id="additionalInfo">
+                                    </textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
                     </div>
                 </div>
             </div>
@@ -119,8 +170,8 @@
     <nav class="navbar navbar navbar-fixed-bottom">
         <div class="container-fluid">
             <div class="btn-group right-side">
-                <button type="submit" id="btnSaveDrive" onclick="editRecordController.validateAndSaveDrive(false)" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Salvare</button>
-                <button type="submit" id="btnSaveDriveAndAddAnother" onclick="editRecordController.setDriveReuse(true)" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span>Salvare si reutilizare</button>
+                <button type="submit" id="btnSaveRecord" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Salvare</button>
+                @*<button type="submit" id="btnSaveDriveAndAddAnother" onclick="editRecordController.setDriveReuse(true)" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span>Salvare si reutilizare</button>*@
                 <button type="button" onclick="editRecordController.cancelEdit();" id="btnCancelSaveDrive" class="btn btn-danger"><span class="glyphicon glyphicon glyphicon-remove"></span> Anulare</button>
             </div>
         </div>
