--- a/ServiciiAutoProject/Views/Records/Index.cshtml
+++ b/ServiciiAutoProject/Views/Records/Index.cshtml
@@ -1,31 +1,26 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Inregistrari";
 }
+<nav class="navbar navbar-inverse nav-bar">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand nav-bar-text" href="#">@ViewBag.Title</a>
+        </div>
+        <div class="button-group right-side">
+            <div class="btn-group">
+                <button class="btn btn-success" id="addButton" onclick="truckController.addNewTruck();"><span class="glyphicon glyphicon glyphicon-plus"></span>Adauga</button>
+                <button class="btn btn-success" id="editButton" disabled onclick="truckController.editTruck();"><span class="glyphicon glyphicon glyphicon-edit"></span> Editeaza</button>
+                <button class="btn btn-danger" id="deleteButton" disabled onclick="truckController.deleteTruck();"><span class="glyphicon glyphicon glyphicon-remove"></span> Sterge</button>
+            </div>
+            @*@Html.ActionLink("Logout", "Logout", "Login", null, new { @class = "no-text-decoration btn btn-primary glyphicon glyphicon-log-out" })*@
+        </div>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
+    </div>
+</nav>
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-12">
+        <div id="recordsGrid"></div>
     </div>
 </div>
+
+<script src="~/Scripts/Pages/recordsController.js"></script>
