--- a/ServiciiAutoProject/Views/Records/Index.cshtml
+++ b/ServiciiAutoProject/Views/Records/Index.cshtml
@@ -8,9 +8,9 @@
         </div>
         <div class="button-group right-side">
             <div class="btn-group">
-                <button class="btn btn-success" id="addButton" onclick="truckController.addNewTruck();"><span class="glyphicon glyphicon glyphicon-plus"></span>Adauga</button>
-                <button class="btn btn-success" id="editButton" disabled onclick="truckController.editTruck();"><span class="glyphicon glyphicon glyphicon-edit"></span> Editeaza</button>
-                <button class="btn btn-danger" id="deleteButton" disabled onclick="truckController.deleteTruck();"><span class="glyphicon glyphicon glyphicon-remove"></span> Sterge</button>
+                <button class="btn btn-success" id="addButton" onclick="recordsController.addNewRecord();"><span class="glyphicon glyphicon glyphicon-plus"></span>Adauga</button>
+                <button class="btn btn-success" id="editButton" disabled onclick="recordsController.editRecord();"><span class="glyphicon glyphicon glyphicon-edit"></span> Editeaza</button>
+                <button class="btn btn-danger" id="deleteButton" disabled onclick="recordsController.deleteRercord();"><span class="glyphicon glyphicon glyphicon-remove"></span> Sterge</button>
             </div>
             @*@Html.ActionLink("Logout", "Logout", "Login", null, new { @class = "no-text-decoration btn btn-primary glyphicon glyphicon-log-out" })*@
         </div>
