--- a/ServiciiAutoProject/Views/Login/Index.cshtml
+++ b/ServiciiAutoProject/Views/Login/Index.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "Index";
 }
 
-
 <body class="login-bg">
     <div class="container">
         <div class="row">
@@ -39,3 +38,4 @@
     </div><!--.container-->
 </body>
 
+<script src="~/Scripts/Pages/loginController.js"></script>
