--- a/ServiciiAutoProject/Content/Site.css
+++ b/ServiciiAutoProject/Content/Site.css
@@ -55,3 +55,22 @@ textarea {
     font-size: 15px;
     color: white;
 }
+
+.jsgrid {
+    font-size: 12px !important;
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
