--- a/ServiciiAutoProject/Views/Client/Index.cshtml
+++ b/ServiciiAutoProject/Views/Client/Index.cshtml
@@ -1,19 +1,21 @@
 ﻿@{
     ViewBag.Title = "Clienti";
 }
-<nav class="navbar navbar-inverse nav-bar" style="background:#1E3A6F;">
-    <div class="container-fluid">
-        <div class="button-group right-side">
-            <div class="btn-group" style="margin-top:7px; padding-right:15px;">
-                <button class="btn btn-success" id="addButton" onclick="clientsController.addNewClient();"><span class="glyphicon glyphicon glyphicon-plus"></span>Adauga</button>
-                <button class="btn btn-success" id="editButton" disabled onclick="clientsController.editClient();"><span class="glyphicon glyphicon glyphicon-edit"></span> Editeaza</button>
-                <button class="btn btn-danger" id="deleteButton" disabled onclick="clientsController.deleteClient();"><span class="glyphicon glyphicon glyphicon-remove"></span> Sterge</button>
+@if (Session != null && Session["RoleLevel"] != null && int.Parse(Session["RoleLevel"].ToString()) == 1)
+{
+    <nav class="navbar navbar-inverse nav-bar" style="background:#1E3A6F;">
+        <div class="container-fluid">
+            <div class="button-group right-side">
+                <div class="btn-group" style="margin-top:7px; padding-right:15px;">
+                    <button class="btn btn-success" id="addButton" onclick="clientsController.addNewClient();"><span class="glyphicon glyphicon glyphicon-plus"></span>Adauga</button>
+                    <button class="btn btn-success" id="editButton" disabled onclick="clientsController.editClient();"><span class="glyphicon glyphicon glyphicon-edit"></span> Editeaza</button>
+                    <button class="btn btn-danger" id="deleteButton" disabled onclick="clientsController.deleteClient();"><span class="glyphicon glyphicon glyphicon-remove"></span> Sterge</button>
+                </div>
             </div>
-            @*@Html.ActionLink("Logout", "Logout", "Login", null, new { @class = "no-text-decoration btn btn-primary glyphicon glyphicon-log-out" })*@
-        </div>
 
-    </div>
-</nav>
+        </div>
+    </nav>
+}
 <div class="row">
     <div class="col-md-12">
         <div id="clientsGrid"></div>
