--- a/ServiciiAutoProject/Views/Records/Index.cshtml
+++ b/ServiciiAutoProject/Views/Records/Index.cshtml
@@ -1,33 +1,35 @@
 ﻿@{
     ViewBag.Title = "Inregistrari";
 }
-<nav class="navbar navbar-inverse nav-bar" style="background:#1E3A6F">
-    <div class="container-fluid">
-        <div class="col-lg-6 col-md-6 col-sm-6" style="padding-right:15px;margin-top:7px;">
-            @using (Html.BeginForm("ImportRecords", "Records", FormMethod.Post, new { enctype = "multipart/form-data" }))
-            {
-                <div class="button-group">
-                    <div class="btn-group">
-                        <label class="btn btn-primary btn-file">
-                            <span class="glyphicon glyphicon-file"></span>
-                            Alege fisier <input type="file" id="selectFile" name="file" onchange="recordsController.fileSelected();" />
-                        </label>
-                        <button class="btn btn-success" id="uploadFile" disabled type="submit" onclick="recordsController.showLoadingScreen();"><span class="glyphicon glyphicon-upload"></span> Incarca date</button>
-                    </div>
-                </div>
-            }
-        </div>
-        <div class="button-group right-side">
-            <div class="btn-group" style="padding-right:15px;margin-top:7px;">
-                <button class="btn btn-success" id="addButton" onclick="recordsController.addNewRecord();"><span class="glyphicon glyphicon glyphicon-plus"></span>Adauga</button>
-                <button class="btn btn-success" id="editButton" disabled onclick="recordsController.editRecord();"><span class="glyphicon glyphicon glyphicon-edit"></span> Editeaza</button>
-                <button class="btn btn-danger" id="deleteButton" disabled onclick="recordsController.deleteRercord();"><span class="glyphicon glyphicon glyphicon-remove"></span> Sterge</button>
-            </div>
-            @*@Html.ActionLink("Logout", "Logout", "Login", null, new { @class = "no-text-decoration btn btn-primary glyphicon glyphicon-log-out" })*@
-        </div>
+@if (Session != null && Session["RoleLevel"] != null && int.Parse(Session["RoleLevel"].ToString()) == 1)
+{
+    <nav class="navbar navbar-inverse nav-bar" style="background:#1E3A6F">
 
-    </div>
-</nav>
+        <div class="container-fluid">
+            <div class="col-lg-6 col-md-6 col-sm-6" style="padding-right:15px;margin-top:7px;">
+                @using (Html.BeginForm("ImportRecords", "Records", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    <div class="button-group">
+                        <div class="btn-group">
+                            <label class="btn btn-primary btn-file">
+                                <span class="glyphicon glyphicon-file"></span>
+                                Alege fisier <input type="file" id="selectFile" name="file" onchange="recordsController.fileSelected();" />
+                            </label>
+                            <button class="btn btn-success" id="uploadFile" disabled type="submit" onclick="recordsController.showLoadingScreen();"><span class="glyphicon glyphicon-upload"></span> Incarca date</button>
+                        </div>
+                    </div>
+                }
+            </div>
+            <div class="button-group right-side">
+                <div class="btn-group" style="padding-right:15px;margin-top:7px;">
+                    <button class="btn btn-success" id="addButton" onclick="recordsController.addNewRecord();"><span class="glyphicon glyphicon glyphicon-plus"></span>Adauga</button>
+                    <button class="btn btn-success" id="editButton" disabled onclick="recordsController.editRecord();"><span class="glyphicon glyphicon glyphicon-edit"></span> Editeaza</button>
+                    <button class="btn btn-danger" id="deleteButton" disabled onclick="recordsController.deleteRercord();"><span class="glyphicon glyphicon glyphicon-remove"></span> Sterge</button>
+                </div>
+            </div>
+        </div>
+    </nav>
+}
 <div class="row">
     <div class="col-md-12">
         <div id="recordsGrid"></div>
